manifests/osaan-admin-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osaan-admin-backend-svc
  namespace: osaan-dev
spec:
  selector:
    app: osaan-admin-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
