manifests/osaan-admin-backend/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: osaan-admin-backend-svc-dr
  namespace: osaan-dev
spec:
  host: osaan-admin-backend-svc.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
